--- a/RangeDataStorage/Cargo.toml
+++ b/RangeDataStorage/Cargo.toml
@@ -4,5 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-serde = "1.0.202"
+serde = { version="1.0.202", features=["derive"] }
 time = "0.3.36"
