--- a/RangeDataStorage/Cargo.toml
+++ b/RangeDataStorage/Cargo.toml
@@ -5,4 +5,6 @@ edition = "2021"
 
 [dependencies]
 serde = { version="1.0.202", features=["derive"] }
-time = "0.3.36"
+time = { version = "0.3.36" , features=["serde"]}
+serde_json = "1.0.117"
+
