--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,4 @@
-workspace = { members = [ "RangeDataStorage","IBApiHandler"] }
+workspace = { members = [ "range_data_storage","IBApiHandler"] }
 [package]
 name = "AlgoTrade"
 version = "0.1.0"
@@ -9,4 +9,4 @@ edition = "2021"
 [dependencies]
 ibapi = "0.4.2"
 IBApiHandler = {path = "./IBApiHandler"}
-RangeDataStorage = {path = "./RangeDataStorage"}
+range_data_storage = {path = "range_data_storage" }
