--- a/IBApiHandler/Cargo.toml
+++ b/IBApiHandler/Cargo.toml
@@ -9,4 +9,4 @@ edition = "2021"
 ibapi = "0.4.2"
 time = { version = "0.3.36", features = ["serde"]}
 serde = { version = "1.0.202", features = ["derive"] }
-RangeDataStorage = { path = "../RangeDataStorage" }
+range_data_storage = { path = "../range_data_storage" }
