--- a/IBApiHandler/Cargo.toml
+++ b/IBApiHandler/Cargo.toml
@@ -10,3 +10,4 @@ ibapi = "0.4.2"
 time = { version = "0.3.36", features = ["serde"]}
 serde = { version = "1.0.202", features = ["derive"] }
 range_data_storage = { path = "../range_data_storage" }
+chrono = "0.4.38"
