--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,4 @@
-workspace = { members = [ "range_data_storage","IBApiHandler"] }
+workspace = { members = [ "range_data_storage","ibapi_handler"] }
 [package]
 name = "AlgoTrade"
 version = "0.1.0"
@@ -8,5 +8,5 @@ edition = "2021"
 
 [dependencies]
 ibapi = "0.4.2"
-IBApiHandler = {path = "./IBApiHandler"}
+ibapi_handler = {path = "ibapi_handler" }
 range_data_storage = {path = "range_data_storage" }
