--- a/ibapi_handler/Cargo.toml
+++ b/ibapi_handler/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "IBApiHandler"
+name = "ibapi_handler"
 version = "0.1.0"
 edition = "2021"
 
@@ -11,3 +11,4 @@ time = { version = "0.3.36", features = ["serde"]}
 serde = { version = "1.0.202", features = ["derive"] }
 range_data_storage = { path = "../range_data_storage" }
 chrono = "0.4.38"
+ordered-float = { version = "4.2.0", features = ["serde"] }
