--- a/backtesting/Cargo.toml
+++ b/backtesting/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2021"
 ibapi = "0.4.2"
 ibapi_handler = {path = "../ibapi_handler" }
 range_data_storage = {path = "../range_data_storage" }
+ordered-float = "4.2.0"
+derivative = "2.2.0"
