--- a/range_data_storage/Cargo.toml
+++ b/range_data_storage/Cargo.toml
@@ -8,3 +8,4 @@ serde = { version="1.0.202", features=["serde_derive"] }
 time = { version = "0.3.36" , features=["serde"]}
 serde_json = "1.0.117"
 rangemap = { version="1.5.1" , features=["serde1"] }
+anyhow = "1.0.86"
