--- a/fq_data_broker/Cargo.toml
+++ b/fq_data_broker/Cargo.toml
@@ -8,3 +8,8 @@ ibapi = "0.4.2"
 ibapi_handler = {path = "../ibapi_handler" }
 range_data_storage = {path = "../range_data_storage" }
 ordered-float = "4.2.0"
+serde = { version="1.0.202", features=["serde_derive"] }
+time = { version = "0.3.36" , features=["serde"]}
+serde_json = "1.0.117"
+rangemap = { version="1.5.1" , features=["serde1"] }
+anyhow = "1.0.86"
