--- a/ibapi_handler/Cargo.toml
+++ b/ibapi_handler/Cargo.toml
@@ -12,3 +12,4 @@ serde = { version = "1.0.202", features = ["derive"] }
 range_data_storage = { path = "../range_data_storage" }
 chrono = "0.4.38"
 ordered-float = { version = "4.2.0", features = ["serde"] }
+anyhow = "1.0.86"
