--- a/backtesting/Cargo.toml
+++ b/backtesting/Cargo.toml
@@ -10,3 +10,6 @@ range_data_storage = {path = "../range_data_storage" }
 ordered-float = "4.2.0"
 derivative = "2.2.0"
 anyhow = "1.0.86"
+fq_data_broker = {path = "../fq_data_broker" }
+time = "0.3.36"
+dotenv = "0.15.0"
